samples/_failures_safe/1761249068_d3860c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_efef5af5.c: In function ‘main’:
./samples/SAFE/__tmp_efef5af5.c:160:40: error: expected ‘)’ at end of input
  160 |                 if (add_matrices(&a, &b
      |                                 ~      ^
      |                                        )
./samples/SAFE/__tmp_efef5af5.c:160:21: error: too few arguments to function ‘add_matrices’
  160 |                 if (add_matrices(&a, &b
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_efef5af5.c:97:5: note: declared here
   97 | int add_matrices(const Matrix* a, const Matrix* b, Matrix* result) {
      |     ^~~~~~~~~~~~
./samples/SAFE/__tmp_efef5af5.c:160:17: error: expected declaration or statement at end of input
  160 |                 if (add_matrices(&a, &b
      |                 ^~
./samples/SAFE/__tmp_efef5af5.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_efef5af5.c:160:17: error: expected declaration or statement at end of input
